--- a/ports/proj4/CONTROL
+++ b/ports/proj4/CONTROL
@@ -1,4 +1,5 @@
 Source: proj4
-Version: 4.9.3-5
+Version: 6.2.0
 Homepage: https://download.osgeo.org/proj
+Build-Depends: sqlite3[tool]
 Description: PROJ.4 library for cartographic projections
